name:                flood
version:             0.1.0.0
synopsis:            Implementation of the popular game Flood-It!
license:             MIT
license-file:        LICENSE
author:              Bhavik Mehta
maintainer:          bhavikmehta8@gmail.com
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable flood
  main-is:             Main.hs
  other-modules:       Colour, Grid, Solve
  build-depends:       base >= 4.8,
                       mtl >= 2.0,
                       array >= 0.4,
                       random >= 1.1,
                       containers >= 0.5,
                       transformers >= 0.5,
                       threepenny-gui >= 0.8
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  exposed-modules:     Colour, Grid, Solve
  default-language:    Haskell2010
  build-depends:       base >= 4.8,
                       mtl >= 2.0,
                       array >= 0.4,
                       random >= 1.1,
                       containers >= 0.5,
                       transformers >= 0.5,
                       threepenny-gui >= 0.8
  hs-source-dirs:      src

benchmark timing
  hs-source-dirs:      benchmark
  main-is:             Bench.hs
  type:                exitcode-stdio-1.0
  build-depends:       base,
                       flood,
                       gauge
  default-language:    Haskell2010
 
test-suite tests
  hs-source-dirs:      test-suite
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       base,
                       flood
  default-language:    Haskell2010
